[metadata]
name = thug-memes
author = Jerry Pussinen
author-email = jerry.pussinen@gmail.com
url = https://github.com/jerry-git/thug-memes
summary = command line tool for creating awesome thug memes
description-file = README.rst
classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[entry_points]
console_scripts =
    meme = thug.cli:meme
    thug = thug.cli:thug_meme

[files]
packages_root = src

data_files =
    detection = src/thug/detect/data/*
    meme = src/thug/meme/data/*
    conf = src/thug/default.conf
[wheel]
universal = 1
